# RotS_Live

./: .gitignore  AGENTS.md  Dockerfile  FEATURES.md  Makefile  README.md  TODO.md  WIP.md  docker-compose.yml  tags
.github/workflows/: ci.yml
docs/: BUILD.md  README.md  Running the Game.md  _TEMPLATE.md
docs/data-formats/: maze-files.md  mudlle-and-scripts.md  object-rent-files.md  player-save.md  shop-files.md  socials-and-messages.md  text-tables.md  world-files.md
docs/superpowers/: save-load-porting-guide.md
docs/superpowers/plans/: 2026-06-27-savebench-finalize.md  2026-06-29-consistent-snapshot-autosave.md  2026-06-29-followup-account-perf-and-consistent-autosave.md  2026-06-29-savebench-port.md  2026-06-30-account-cache-and-json-perf.md  2026-06-30-consistent-snapshot-autosave-status.md  2026-06-30-perf-work-handoff.md
docs/superpowers/specs/: 2026-06-27-savebench-finalize-ab-test-design.md  2026-06-29-consistent-snapshot-autosave-design.md  2026-06-29-savebench-pipeline-performance-findings.md  2026-06-29-savebench-port-design.md  2026-06-30-account-cache-and-json-perf-design.md  2026-06-30-account-cache-and-json-perf-results.md
docs/systems/: cleric-mystic-system.md  combat-loop.md  combat-stat-examples.md  magic-system.md  ranger-skills.md  specializations.md  stats-and-character-power.md  warrior-skills.md
lib/text/: help_tbl
scripts/: rots-docker.sh
src/: CMakeLists.txt  Makefile  account_cache.cpp  account_cache.h  account_management.cpp  account_management.h  account_management_assets.cpp  account_management_assets.h  account_management_identity.cpp  account_management_identity.h  account_management_internal.cpp  account_management_migration.cpp  account_management_migration.h  account_management_presentation.cpp  account_management_presentation.h  account_management_storage.cpp  account_management_storage.h  account_management_types.h  act_comm.cpp  act_info.cpp  act_move.cpp  act_offe.cpp  act_othe.cpp  act_wiz.cpp  ban.cpp  boards.cpp  char_utils.cpp  character_json.cpp  character_json.h  color.cpp  color.h  comm.cpp  comm.h  config.cpp  consts.cpp  crashsave_schedule.cpp  crashsave_schedule.h  db.cpp  db.h  exploits_json.cpp  (+42 more)
src/tests/: Makefile  account_cache_tests.cpp  account_management_assets_header_compile.cpp  account_management_identity_header_compile.cpp  account_management_migration_header_compile.cpp  account_management_presentation_header_compile.cpp  account_management_storage_header_compile.cpp  account_management_tests.cpp  account_management_types_header_compile.cpp  act_wiz_tests.cpp  battle_mage_handler_tests.cpp  char_utils_tests.cpp  character_json_tests.cpp  color_tests.cpp  crashsave_schedule_tests.cpp  damage_tests.cpp  db_loader_tests.cpp  exploits_json_tests.cpp  fight_proc_tests.cpp  interpre_account_menu_tests.cpp  json_perf_tests.cpp  json_utils_tests.cpp  mage_tests.cpp  objects_json_tests.cpp  olog_hai_tests.cpp  player_finalize_tests.cpp  protocol_tests.cpp  save_benchmark_tests.cpp  skill_timer_tests.cpp  startup_options_tests.cpp  test_random_utils.cpp  test_random_utils.h  test_random_utils_tests.cpp  weapon_master_handler_tests.cpp
tools/: account_smoke.py  account_smoke_tests.py
